Scrollbar fixe

--- a/web/src/pages/projectBoard/ProjectBoard.css
+++ b/web/src/pages/projectBoard/ProjectBoard.css
@@ -15,7 +15,7 @@
    display: flex;
    flex-wrap: wrap;
    height: 70vh;
-   overflow: scroll;
+   overflow: auto;
    overflow-x: hidden;
 }
 
